@@ -1,3 +1,7 @@
+2010-06-12  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #14356: Make disable_controls available for all group fields, not just type "file" (Thanks to Sven Teuber)
+
 2010-06-12  Susanne Moog  <typo3@susanne-moog.de>
 
 	* Follow-up to #8778: Disabled draft workspace: NEWS.txt & forgotten ext_conf_template
